fixed the overflow issue

--- a/css/app.css
+++ b/css/app.css
@@ -48,6 +48,7 @@ body {
   font-family: var(--font-family);
   font-size: 16px;
   font-weight: 300;
+  overflow-x: hidden;
   height: 100%;
 }
 
@@ -58,7 +59,6 @@ body {
     var(--goo) 96%,
     rgba(0, 255, 255, 0) 100%
   );
-  overflow: hidden;
   top: 0;
   width: 110%;
   height: 80px;
